[package]
name = "bevy_debug_log"
version = "0.6.0"
edition = "2021"
authors = ["Rustunit <mail@rustunit.com>"]
description = "Allows viewing tracing debug log output inside the bevy app using vanilla bevy_ui."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustunit/bevy_debug_log"
readme = "README.md"
keywords = ["bevy", "gamedev", "testing", "logging"]
categories = ["game-development"]
exclude = ["assets/"]

[dependencies]
bevy = { version = "0.16.0-rc.1", default-features = false, features = [
    "default_font",
    "bevy_ui",
    "bevy_picking",
] }
bevy_transform = { version = "0.16.0-rc.1" }
bevy_math = { version = "0.16.0-rc.1" }
bevy_input = { version = "0.16.0-rc.1" }
bevy_log = { version = "0.16.0-rc.1" }
time = { version = "0.3", features = ["formatting", "wasm-bindgen"] }

[dev-dependencies]
pretty_assertions = "1"
bevy = "0.16.0-rc.1"
